# ogs_kb1

./: .gitignore  LICENSE  README.md  compileInKiel.sh  forRZ_FindMKL.cmake  setup_OGS_FEM.bat  setup_OGS_FEM_SP.bat
Libs/gdal/: geos_c.h  (+4 more)
sources/: CMakeLists.txt  compileInKiel.sh
sources/Base/: CMakeLists.txt  CorrectScientificNotationMain.cpp  DateTools.cpp  DateTools.h  FileFinder.h  FileTools.cpp  FileTools.h  MemWatch.cpp  StringTools.cpp  StringTools.h  binarySearch.cpp  binarySearch.h  display.cpp  display.h  isnan.h  makros.cpp  makros.h  memory.cpp  memory.h  printList.h  swap.h  timer.cpp  timer.h  uniqueListInsert.h  wait.h
sources/Build_OGS_FEM/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  OGS.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
sources/Build_OGS_FEM/Base/: Base.vcxproj  Base.vcxproj.filters  Configure.h
sources/Build_OGS_FEM/FEM/: FEM.vcxproj  FEM.vcxproj.filters  cmake_install.cmake
sources/Build_OGS_FEM/FileIO/: FileIO.vcxproj  FileIO.vcxproj.filters
sources/Build_OGS_FEM/GCC/: GCC.vcxproj  GCC.vcxproj.filters  cmake_install.cmake
sources/Build_OGS_FEM/GEO/: GEO.vcxproj  GEO.vcxproj.filters  cmake_install.cmake
sources/Build_OGS_FEM/MSH/: MSH.vcxproj  MSH.vcxproj.filters  cmake_install.cmake
sources/Build_OGS_FEM/MSHGEOTOOLS/: MSHGEOTOOLS.vcxproj  MSHGEOTOOLS.vcxproj.filters  cmake_install.cmake
sources/Build_OGS_FEM/MathLib/: MathLib.vcxproj  MathLib.vcxproj.filters  cmake_install.cmake
sources/Build_OGS_FEM/OGS/: ogs.vcxproj  ogs.vcxproj.filters
sources/Build_OGS_FEM_SP/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  OGS.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
sources/Build_OGS_FEM_SP/Base/: Base.vcxproj  Base.vcxproj.filters  BuildInfo.h  Configure.h  cmake_install.cmake
sources/Build_OGS_FEM_SP/FEM/: FEM.vcxproj  FEM.vcxproj.filters
sources/Build_OGS_FEM_SP/FileIO/: FileIO.vcxproj  FileIO.vcxproj.filters  cmake_install.cmake
sources/Build_OGS_FEM_SP/GCC/: GCC.vcxproj  GCC.vcxproj.filters
sources/Build_OGS_FEM_SP/GEO/: GEO.vcxproj  GEO.vcxproj.filters
sources/CMakeConfiguration/: AddBenchmark.cmake  BuildExternalLibs.cmake  CMakeSetup.cmake  CompilerSetup.cmake  Find.cmake  FindGEMlib.cmake  FindLIS.cmake  FindLibGeoTiff.cmake  FindMKL.cmake  FindShapelib.cmake  GeneralProjectSetup.cmake  Macros.cmake  Pack.cmake
sources/EQL/: CMakeLists.txt  eqlink.cpp
sources/FEM/: CAP_IO.cpp  CAP_IO.h  CMakeLists.txt  Constrained.h  DUMUX.cpp  DUMUX.h  Doxyfile  Eclipse.cpp  Eclipse.h  FEMCondition.cpp  FEMCondition.h  FEMEnums.cpp  FEMEnums.h  GeoInfo.h  LinearFunctionData.cpp  LinearFunctionData.h  OGS_WDC.cpp  OGS_WDC.h  Output.cpp  Output.h  ProcessInfo.cpp  ProcessInfo.h  SourceTerm.cpp  SparseMatrixDOK.cpp  SparseMatrixDOK.h  StepperBulischStoer.h  Stiff_Bulirsch-Stoer.cpp  Stiff_Bulirsch-Stoer.h  break.cpp  break.h  comparison.h  conversion_rate.cpp  conversion_rate.h  display.cpp  display.h  eos.cpp  eos.h  equation_class.cpp  equation_class.h  fct_mpi.cpp  (+85 more)
sources/FileIO/: CMakeLists.txt  FEFLOWInterface.cpp  FEFLOWInterface.h  GMSInterface.cpp  GMSInterface.h  GocadInterface.cpp  GocadInterface.h  NetCDFInterface.h  OGSIOVer4.cpp  OGSIOVer4.h  PetrelInterface.cpp  PetrelInterface.h  Reader.cpp  Reader.h  SHPInterface.cpp  SHPInterface.h  StationIO.cpp  StationIO.h  Writer.cpp
sources/GCC/: Activity.cpp  Activity.h  CMakeLists.txt  Density.cpp  Density.h  DiffAL.h  DiffOH.cpp  DiffOH.h  Fluid.cpp  Fluid.h  HKF.cpp  HKF.h  IAPWS-IF97.cpp  IAPWS-IF97.h  IO.cpp  IO.h  NR.cpp  NR.h  PDE.cpp  PDE.h  PITZcalc.h  PITZdata.cpp  PITZdata.h  VLE.cpp  VLE.h  WATEQdata.h  dllheader.h  eqbrm.cpp  eqbrm.h  export.h  logk.cpp  logk.h  species.h
sources/GEO/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BruteForceClosestPair.cpp  BruteForceClosestPair.h  CMakeLists.txt  ClosestPair.h  Color.cpp  Color.h  GEOObjects.cpp  GEOObjects.h  GeoObject.h  GeoType.cpp  GeoType.h  Grid.h  OctTree.h  Point.cpp  Point.h  PointVec.cpp  PointVec.h  PointWithID.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  PolylineVec.h  PolylineWithSegmentMarker.cpp  PolylineWithSegmentMarker.h  ProjectData.cpp  ProjectData.h  PropertyBounds.h  QuadTree.h  Raster.cpp  Raster.h  SensorData.cpp  SensorData.h  SimplePolygonTree.cpp  SimplePolygonTree.h  Station.cpp  Station.h  Surface.cpp  (+24 more)
sources/MSH/: CMakeLists.txt  GridAdapter.cpp  GridAdapter.h  MSHEnums.cpp  MSHEnums.h  MeshNodesAlongPolyline.cpp  MeshNodesAlongPolyline.h  MeshQualityArea.cpp  MeshQualityArea.h  MeshQualityChecker.cpp  MeshQualityChecker.h  MeshQualityEquiAngleSkew.cpp  MeshQualityEquiAngleSkew.h  MeshQualityShortestLongestRatio.cpp  MeshQualityShortestLongestRatio.h  MeshQualityVolume.cpp  MeshQualityVolume.h  MshEditor.cpp  MshEditor.h  admin.h  msh_core.cpp  msh_core.h  msh_edge.cpp  msh_edge.h  msh_elem.cpp  msh_elem.h  msh_faces.cpp  msh_faces.h  msh_lib.cpp  msh_lib.h  msh_lib_ext.cpp  msh_mesh.cpp  msh_mesh.h  msh_node.cpp  msh_node.h  msh_pnt.cpp
sources/MSHGEOTOOLS/: CMakeLists.txt  ExtractMeshNodes.cpp  ExtractMeshNodes.h
sources/MathLib/: AnalyticalGeometry.cpp  AnalyticalGeometry.h  CMakeLists.txt  EarClippingTriangulation.cpp  EarClippingTriangulation.h  LinkedTriangle.cpp  LinkedTriangle.h  MathTools.cpp  MathTools.h  Matrix.h  Vector3.h  max.h
sources/OGS/: CMakeLists.txt  ogs_display.cpp  ogs_display.h  rf.cpp
sources/OGSProject/: CMakeLists.txt  gs_project.cpp  gs_project.h
sources/Qt/: CMakeLists.txt
sources/TOOLS/: CMakeLists.txt  OGS_WDC.cpp  OGS_WDC.h  OGS_contraflow.cpp  OGS_contraflow.h  casing.h  comparison.h  contraflow.h  fakeSimulator.h  fancyTimer.h  fluid.h  greeks.h  heatPump.h  logger.cpp  logger.h  parameter.h  piping.h  segment.h  stru3_gauss.h  stru3_matrix.h  timer.h  utilities.h  wdc_config.h  wellDoubletControl.h
sources/UTL/: benchtimer.cpp  benchtimer.h  tokenbuf.cpp  tokenbuf.h
sources/scripts/: run_benchmarks.sh  run_tools.bat  setup_vs.bat
sources/tests/: testBase.cpp  testBmSkel.cxx  testGeo.cpp  testOgs.cxx  testrunner.cpp
(+912 files in other folders)
