
SET ( SOURCES
	ExtractMeshNodes.h
	ExtractMeshNodes.cpp
)

# include directories
INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/MSHGEOTOOLS
	${CMAKE_SOURCE_DIR}/Base
	${CMAKE_SOURCE_DIR}/GEO
	${CMAKE_SOURCE_DIR}/MSH
	${CMAKE_SOURCE_DIR}/MathLib
	${CMAKE_SOURCE_DIR}/FileIO
	${CMAKE_SOURCE_DIR}/FEM
)

# create library
ADD_LIBRARY( MSHGEOTOOLS STATIC ${SOURCES} )

TARGET_LINK_LIBRARIES (
        MSHGEOTOOLS
        MSH
        GEO
        ${CMAKE_THREAD_LIBS_INIT}
)

