IF(NOT OGS_USE_QT AND NOT OGS_BUILD_FILECONVERTER)
	RETURN()
ENDIF()

SET(OGS_FEM ON )

IF (NOT VTK_FOUND)
	MESSAGE(FATAL_ERROR "Error: VTK was not found but is needed for the GUI. Aborting...")
ENDIF (NOT VTK_FOUND)
INCLUDE( ${VTK_USE_FILE} )

SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO  "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /ZI /Od /Ob0")

# Add subprojects
IF(OGS_BUILD_FILECONVERTER)
	MESSAGE (STATUS	"Configuring for OGSFileconverter" )
ENDIF()
ADD_SUBDIRECTORY( Base )
ADD_SUBDIRECTORY( DataView/StratView )
ADD_SUBDIRECTORY( DataView )
ADD_SUBDIRECTORY( DataView/DiagramView )
ADD_SUBDIRECTORY( VtkVis )

IF(OGS_USE_QT)
	MESSAGE (STATUS	"Configuring for OGS with GUI" )
	ADD_SUBDIRECTORY( VtkAct )
	IF (OGS_USE_OPENSG)
		ADD_SUBDIRECTORY( OpenSG )
	ENDIF (OGS_USE_OPENSG)
	IF(VRPN_FOUND AND OGS_USE_VRPN)
		ADD_SUBDIRECTORY( Vrpn )
	ENDIF()
	ADD_SUBDIRECTORY( Gui )
ENDIF(OGS_USE_QT)